# t24

./: README.md  output.json  pyproject.toml  settlement.json
auction_settle/: __init__.py  audit.py  cli.py  data_loader.py  fees.py  models.py  settlement.py
auction_settle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
auction_settle/sample_data/: __init__.py  generate.py
auction_settle/sample_data/data/: bids.json  disputes.json  lots.json  sellers.json
data/: buyers.json  fee_rules.json
tests/: __init__.py  test_audit.py  test_fees.py  test_settlement.py
